# PCCR

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  desk-chair-normalnpz.npz  vcpkg.json
backend/registration/: CMakeLists.txt
backend/registration/bufferx/: bufferx_backend.cpp  bufferx_backend.hpp
backend/registration/bufferx/python/: VENDORED.md  bufferx_worker.py  download_weights.sh  requirements.txt
backend/registration/bufferx/python/_shims/: knn_cuda.py  torch_batch_svd.py
backend/registration/bufferx/python/_shims/pointnet2_ops/: __init__.py  pointnet2_utils.py
backend/registration/bufferx/python/bufferx_upstream/: .gitignore  .hfignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test.py  train.py  trainer.py
backend/registration/bufferx/python/bufferx_upstream/config/: __init__.py  eth_config.py  indoor_config.py  kaist_config.py  kaist_hetero_config.py  kitti_config.py  mit_config.py  modelnet40_config.py  outdoor_config.py  oxford_config.py  scannetpp_faro_config.py  scannetpp_iphone_config.py  threedlomatch_config.py  threedmatch_config.py  tiers_config.py  tiers_hetero_config.py  wod_config.py
backend/registration/bufferx/python/bufferx_upstream/config/splits/: test_kaist.txt  test_mit.txt  test_oxford.txt  test_scannetpp_faro.txt  test_scannetpp_iphone.txt  test_tiers.txt  test_wod.txt
backend/registration/bufferx/python/bufferx_upstream/cpp_wrappers/cpp_neighbors/: setup.py  wrapper.cpp
backend/registration/bufferx/python/bufferx_upstream/cpp_wrappers/cpp_subsampling/: setup.py  wrapper.cpp
backend/registration/bufferx/python/bufferx_upstream/dataset/: README.md  base_dataset.py  dataloader.py  eth.py  kaist.py  kitti.py  mit.py  modelnet40.py  oxford.py  scannetpp_faro.py  scannetpp_iphone.py  threedmatch.py  tiers.py  wod.py
backend/registration/bufferx/python/bufferx_upstream/dataset/modelnet40/: process_modelnet40.py
backend/registration/bufferx/python/bufferx_upstream/dataset/scannetpp/: env_setup.sh  scannetpp_faro_process.sh  scannetpp_iphone_process.sh
backend/registration/bufferx/python/bufferx_upstream/huggingface/model_card/: README.md
backend/registration/bufferx/python/bufferx_upstream/huggingface/space/: Dockerfile  README.md  app.py  requirements.txt
backend/registration/bufferx/python/bufferx_upstream/loss/: desc_loss.py
backend/registration/bufferx/python/bufferx_upstream/models/: BUFFERX.py  patch_embedder.py  patchnet.py  pose_estimator.py
backend/registration/bufferx/python/bufferx_upstream/requirements/: base.txt  dev.txt  hub.txt  scannetpp.txt
backend/registration/bufferx/python/bufferx_upstream/scripts/: download_all_data.sh  download_pretrained_models.py  download_pretrained_models.sh  eval_all.sh  eval_all_hetero.sh  install.sh  install_py3_10_cuda11_8.sh  install_py3_11_cuda12_4.sh  install_py3_8_cuda11_1.sh  upload_to_huggingface.py
backend/registration/bufferx/python/bufferx_upstream/utils/: SE3.py  gpu_timer.py  progress_format.py  result_io.py  test_args.py  tools.py
backend/registration/common/: config.cpp  python_worker.cpp  reg_common.cpp  reg_common.hpp  registration.cpp
backend/registration/g3reg/: g3reg_backend.cpp  g3reg_backend.hpp
backend/registration/gicp/: gicp_backend.cpp  gicp_backend.hpp
backend/registration/gradient_sdf_gpu/: gsdf_gpu.cpp  gsdf_gpu.hpp
backend/registration/gradient_sdf_gpu/python/: VENDORED.md  gsdf_worker.py  requirements.txt
backend/registration/gradient_sdf_gpu/python/gradient_sdf_registration/: __init__.py  _iou_func.py  gradient_sdf.py  pca_transform.py  registration.py  robust_loss.py
backend/registration/gradient_sdf_gpu/python/gradient_sdf_registration/exhaustive_grid/: __init__.py  data_utils.py  fft_init.py  pc_utils.py  rot_utils.py
backend/registration/include/cloudcropper/registration/: config.hpp  python_worker.hpp  registration.hpp
backend/registration/kiss_matcher/: fetch_kiss_matcher.cmake  kiss_backend.cpp  kiss_backend.hpp
backend/registration/rap/: rap_backend.cpp  rap_backend.hpp
backend/registration/rap/python/: VENDORED.md  download_weights.sh  rap_worker.py  requirements.txt
backend/registration/rap/python/_shims/: flash_attn.py
backend/registration/rap/python/_shims/pytorch3d/: __init__.py  ops.py  renderer.py  structures.py
backend/registration/rap/python/_shims/pytorch3d/loss/: __init__.py  chamfer.py
backend/registration/rap/python/rap_upstream/: .gitignore  LICENSE  README.md  app.py  demo.py  requirements_other.txt  sample.py
backend/registration/rap/python/rap_upstream/config/: RAP_inference.yaml
backend/registration/rap/python/rap_upstream/config/data/: data_tmp.yaml
backend/registration/rap/python/rap_upstream/config/loggers/: wandb.yaml
backend/registration/rap/python/rap_upstream/config/model/: rap_10.yaml  rap_12.yaml  rap_16.yaml  rap_8.yaml
backend/registration/rap/python/rap_upstream/config/trainer/: infer.yaml  main.yaml
backend/registration/rap/python/rap_upstream/dataset_process/: extract_sample_features.py  visualize_registered_pointclouds.py  visualize_sample_features.py
backend/registration/rap/python/rap_upstream/rectified_point_flow/: modeling.py  procrustes.py  sampler.py  visualizer.py
backend/registration/rap/python/rap_upstream/scripts/: download_weights_and_demo_data.sh  install.sh  test_script_example.sh
config/: rap.yaml  (+5 more)
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt  analysis.cpp  attribute.cpp  crop.cpp  denoise.cpp  eigen3x3.hpp  grid_index.hpp  normals.cpp  octree.hpp  point_cloud.cpp
src/io/: CMakeLists.txt  byte_stream.cpp  mcap_impl.cpp  npz.cpp  pcd.cpp  ply.cpp  registry.cpp  rosbag.cpp
src/transport/: CMakeLists.txt  gzip.cpp
src/viewer/: CMakeLists.txt  box_renderer.cpp  box_renderer.hpp  camera.hpp  gl_util.cpp  gl_util.hpp  point_renderer.cpp  point_renderer.hpp  viewer.cpp
tests/: CMakeLists.txt  cc_tests.cpp
tests/data/hesai_livox2_bag/: metadata.yaml
tests/data/reg_pairs/: _compare.tsv  frag_115.npz  frag_116.npz  robot1.npz  robot2.npz  source_0.npz  target_0.npz
(+131 files in other folders)
