[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buffer-x"
version = "0.1.0"
description = "BUFFER-X: zero-shot point cloud registration across diverse scenes."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Minkyun Seo" },
  { name = "Hyungtae Lim" },
  { name = "Kanghee Lee" },
  { name = "Luca Carlone" },
  { name = "Jaesik Park" },
]
keywords = [
  "point-cloud-registration",
  "3d-vision",
  "lidar",
  "robotics",
  "pytorch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.optional-dependencies]
runtime = [
  "easydict>=1.13",
  "einops>=0.7",
  "kornia>=0.7",
  "matplotlib>=3.7",
  "nibabel>=5.0",
  "numpy==1.26.3",
  "open3d==0.18.0; python_version < '3.12'",
  "open3d>=0.19.0; python_version >= '3.12'",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
  "tensorboard>=2.14",
  "tensorboardX>=2.6",
  "tqdm>=4.66",
]
hub = ["huggingface_hub>=0.31"]
kiss = ["kiss-matcher"]
scannetpp = ["imageio>=2.34", "lz4>=4.3", "munch>=4.0", "PyYAML>=6.0"]
dev = ["pre-commit>=3.5", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/MIT-SPARK/BUFFER-X"
Repository = "https://github.com/MIT-SPARK/BUFFER-X"
Paper = "https://arxiv.org/abs/2503.07940"

[tool.setuptools]
py-modules = ["train", "trainer", "test"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "dataset*", "loss*", "models*", "utils*"]
namespaces = true

[tool.setuptools.package-data]
config = ["splits/*.txt"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Select rules for errors (E), flake8 defaults (F), and warnings like unused variables (W)
select = ["E", "F", "W"]

[tool.ruff.format]
# Use a formatting style compatible with Black
quote-style = "double"
